backend/tests/golden/queries/positive/03_virtual_table_in_join/query.sdbl
ВЫБРАТЬ
    Т.Номенклатура,
    О.КоличествоОстаток
ИЗ
    Документ.РеализацияТоваровУслугТовары КАК Т
    ВНУТРЕННЕЕ СОЕДИНЕНИЕ РегистрНакопления.ТоварыНаСкладах.Остатки(, ) КАК О
    ПО Т.Номенклатура = О.Номенклатура
