backend/tests/golden/queries/negative/03_virtual_table_in_from/query.sdbl
ВЫБРАТЬ
    Номенклатура,
    КоличествоОстаток
ИЗ
    РегистрНакопления.ТоварыНаСкладах.Остатки(&НаДату, Склад = &Склад)
